@@ -1,0 +1,11 @@
+version: '3'
+services:
+  web:
+    build: .
+    links:
+      - "mysql:database"
+  mysql:
+    image: "mysql:5.6"
+    environment:
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_DATABASE: test
