@@ -1,0 +1,3 @@
+#!/bin/sh
+docker-compose build
+docker-compose up
